--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 <body>
     <canvas id="cnvs" width="640" height="480"></canvas>
 </body>
+<!--<script src="WebGLDeveloperTools/src/debug/webgl-debug.js"></script>-->
+<script src="https://mdn.github.io/webgl-examples/tutorial/gl-matrix.js"></script>
+<script src="consts.js"></script>
+<script src="render.js"></script>
 <script src="shaders.js"></script>
+<script src="geometry.js"></script>
 <script src="load.js"></script>
 <script src="main.js"></script>
 </html>
