--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </body>
 <!--<script src="WebGLDeveloperTools/src/debug/webgl-debug.js"></script>-->
 <script src="https://mdn.github.io/webgl-examples/tutorial/gl-matrix.js"></script>
+<!--<script src="parse-obj/parse-obj.js"></script>-->
 <script src="consts.js"></script>
 <script src="render.js"></script>
 <script src="shaders.js"></script>
