--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <!--<script src="WebGLDeveloperTools/src/debug/webgl-debug.js"></script>-->
 <script src="https://mdn.github.io/webgl-examples/tutorial/gl-matrix.js"></script>
 <!--<script src="parse-obj/parse-obj.js"></script>-->
-<script src="consts.js"></script>
-<script src="render.js"></script>
-<script src="shaders.js"></script>
-<script src="geometry.js"></script>
-<script src="load.js"></script>
-<script src="main.js"></script>
+<script src="js/consts.js"></script>
+<script src="js/render.js"></script>
+<script src="js/shaders.js"></script>
+<script src="js/geometry.js"></script>
+<script src="js/load.js"></script>
+<script src="js/main.js"></script>
 </html>
