--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
 </head>
 <body>
-    <canvas id="cnvs" width="640" height="480"></canvas>
+    <canvas id="cnvs" width="1200" height="600"></canvas>
 </body>
 <!--<script src="WebGLDeveloperTools/src/debug/webgl-debug.js"></script>-->
 <script src="https://mdn.github.io/webgl-examples/tutorial/gl-matrix.js"></script>
-<!--<script src="parse-obj/parse-obj.js"></script>-->
+<script src="js/texture.js"></script>
 <script src="js/consts.js"></script>
 <script src="js/render.js"></script>
 <script src="js/shaders.js"></script>
