--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <script src="https://mdn.github.io/webgl-examples/tutorial/gl-matrix.js"></script>
 <script src="js/texture.js"></script>
 <script src="js/consts.js"></script>
+<script src="js/input_consts.js"></script>
+<script src="js/input.js"></script>
 <script src="js/render.js"></script>
 <script src="js/shaders.js"></script>
 <script src="js/geometry.js"></script>
