--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <canvas id="cnvs" width="1200" height="1200"></canvas>
 </body>
 <!--<script src="WebGLDeveloperTools/src/debug/webgl-debug.js"></script>-->
-<script src="https://mdn.github.io/webgl-examples/tutorial/gl-matrix.js"></script>
+<!--<script src="https://mdn.github.io/webgl-examples/tutorial/gl-matrix.js"></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"
+      integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ=="
+      crossorigin="anonymous" defer></script>
 <script src="js/texture.js"></script>
 <script src="js/consts.js"></script>
 <script src="js/input_consts.js"></script>
